# nautilus-open-atom

./: AUTHORS  Makefile.am  README.md  TODO  autogen.sh  configure.in  nautilus-open-atom.doap  nautilus-open-atom.schemas.in
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  ar.po  be.po  be@latin.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  kn.po  ko.po  lt.po  lv.po  (+30 more)
src/: Makefile.am  nautilus-open-atom.c  nautilus-open-atom.h  open-atom.c
